# echo

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: pages.yml
.scratch/docs-backlog/: README.md
crates/echo_ast/: Cargo.toml
crates/echo_codegen/: Cargo.toml
crates/echo_codegen/src/: abi.rs  collection_lowering.rs  control_flow_lowering.rs  expression_lowering.rs  jit.rs  lib.rs  module.rs  php_lowering.rs  reflection_lowering.rs  runtime_symbols.rs  statement_lowering.rs  std_lowering.rs  task_lowering.rs  tests.rs  userland_lowering.rs
crates/echo_codegen/src/abi/: php_builtins.rs
crates/echo_codegen/src/abi/php_builtins/: array_entries.rs  crypto_entries.rs  filesystem_entries.rs  math_entries.rs  string_entries.rs
crates/echo_codegen/src/runtime_symbols/: core.rs  php.rs  stdlib.rs
crates/echo_codegen/src/runtime_symbols/php/: array.rs  crypto.rs  environment.rs  error.rs  filesystem.rs  math.rs  output.rs  string.rs  types.rs
crates/echo_codegen/src/tests/: collections.rs  control_flow.rs  expressions.rs  php_builtins.rs  php_compat.rs  php_environment.rs  php_filesystem.rs  reflection.rs  stdlib.rs  task.rs  userland.rs
crates/echo_codegen_abi/: Cargo.toml
crates/echo_diagnostics/: Cargo.toml
crates/echo_hir/: Cargo.toml
crates/echo_index/: Cargo.toml
crates/echo_lexer/: Cargo.toml
crates/echo_lsp/: Cargo.toml
crates/echo_lsp/src/: completion.rs  definition.rs  definition_composer.rs  definition_method.rs  definition_target.rs  diagnostics.rs  document.rs  document_links.rs  hover.rs  indexing.rs  lib.rs  position.rs  references.rs  rename.rs  semantic_tokens.rs  server.rs  signature_help.rs  symbols.rs
crates/echo_lsp/src/definition/: tests.rs
crates/echo_lsp/src/definition/tests/: file_paths.rs  methods.rs  targets.rs
crates/echo_lsp/src/server/: tests.rs
crates/echo_mir/: Cargo.toml
crates/echo_parser/: Cargo.toml
crates/echo_parser/src/: grammar.rs  lib.rs  preprocess.rs  tests.rs  validation.rs
crates/echo_parser/src/tests/: concurrency.rs  echo_surface.rs  strings.rs
crates/echo_parser/tests/: php_fixtures.rs
crates/echo_reflection/: Cargo.toml
crates/echo_resolver/: Cargo.toml
crates/echo_runtime/: Cargo.toml
crates/echo_runtime/src/: abi.rs  assertions.rs  callable.rs  collections.rs  crypto.rs  encoding.rs  environment.rs  error.rs  execution.rs  filesystem.rs  gc.rs  io.rs  lib.rs  math.rs  net.rs  output.rs  poll.rs  process.rs  reflection.rs  require.rs  runtime_tests.rs  sched.rs  string.rs  task.rs  task_group.rs  thread.rs  time.rs  value.rs
crates/echo_runtime/src/collections/: keys.rs  search.rs  sequence.rs
crates/echo_runtime/src/filesystem/: content.rs  links.rs  metadata.rs  mutation.rs  stream.rs  temporary.rs
crates/echo_runtime/src/output/: buffer.rs
crates/echo_runtime/src/runtime_tests/: arithmetic.rs  callable.rs  collections.rs  crypto.rs  encoding.rs  environment.rs  error.rs  filesystem.rs  math.rs  scalar.rs  stdlib.rs  string.rs  string_collections.rs  string_compare.rs  string_encoding.rs  string_format.rs  string_paths.rs  string_rewrite.rs  string_search.rs  string_span.rs  string_substr.rs  task.rs  time.rs  value.rs
crates/echo_runtime/src/runtime_tests/collections/: access.rs  keys.rs  search.rs  sequence.rs
crates/echo_runtime/src/runtime_tests/encoding/: base64.rs  shell.rs  url.rs
crates/echo_runtime/src/runtime_tests/filesystem/: content.rs  links.rs  metadata.rs  mutation.rs  stream.rs  temporary.rs
crates/echo_runtime/src/runtime_tests/string_search/: matches.rs  position.rs
crates/echo_runtime/src/runtime_tests/value/: arithmetic.rs  coercion.rs  inspect.rs  reflection.rs  types.rs
crates/echo_runtime/src/string/: compare.rs  pattern.rs  sequence.rs
crates/echo_runtime/src/value/: arithmetic.rs  coercion.rs  inspect.rs
crates/echo_semantics/: Cargo.toml
crates/echo_source/: Cargo.toml
crates/echo_std/: Cargo.toml
crates/echo_syntax/: Cargo.toml
crates/xo/: Cargo.toml
crates/xo/src/: build.rs  main.rs  repl.rs  source.rs  test_runner.rs  tools.rs
crates/xo/src/repl/: tests.rs
crates/xo/tests/: cli.rs  echo_bench.rs  jit.rs  php_bench.rs  php_fixtures.rs  repl.rs
crates/xo/tests/support/: artifacts.rs  benchmark.rs  fixtures.rs  metrics.rs  mod.rs  process.rs
docs/: PHP_STATUS.md  architecture.txt  compat.md  concurrency-runtime-model.md  echo-index.md  effect-blocks.md  imports.md  llvm-optimization-modes.md  lsp.md  output-buffering.md  parser-modes.md  php-arithmetic.md  runtime-abi.md  semantics.md  stdlib.md  strict-mode-type-system.md  strings.md  time-foundation.md  typed-errors.md
docs/adr/: 0001-shared-compiler-pipeline.md  0002-llvm-ir-execution-boundary.md  0003-single-echo-language-mode.md  0004-ast-represents-source-syntax.md  0005-semantic-facts-belong-in-echo-semantics.md  0006-hir-and-mir-are-distinct-lowering-layers.md  0007-rust-runtime-owns-executable-semantics.md  0008-module-and-namespace-syntax-converge-before-lowering.md  0009-semantic-profiles-are-explicit-source-declarations.md  0010-std-is-a-reserved-standard-library-root.md  0011-callable-resolution-uses-shared-symbol-model.md  (+10 more)
examples/: hello-server.echo  hello.php  hello.xo
scripts/: check-fast  fmt
std/: Net.echo  assert.echo  containers.echo  http.echo  net.echo  php.echo  php_builtins.echo  reflect.echo  time.echo
www/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+852 files in other folders)
