[workspace]
resolver = "2"
members = [
  "crates/echo_source",
  "crates/echo_syntax",
  "crates/echo_diagnostics",
  "crates/echo_lexer",
  "crates/echo_ast",
  "crates/echo_parser",
  "crates/echo_semantics",
  "crates/echo_index",
  "crates/echo_resolver",
  "crates/echo_lsp",
  "crates/echo_hir",
  "crates/echo_mir",
  "crates/echo_codegen_abi",
  "crates/echo_codegen",
  "crates/echo_reflection",
  "crates/echo_runtime",
  "crates/echo_std",
  "crates/xo",
]
