[package]
name = "echo_lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6"
ropey = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp-server = "0.23"

echo_diagnostics = { path = "../echo_diagnostics" }
echo_index = { path = "../echo_index" }
echo_lexer = { path = "../echo_lexer" }
echo_parser = { path = "../echo_parser" }
echo_reflection = { path = "../echo_reflection" }
echo_semantics = { path = "../echo_semantics" }
echo_source = { path = "../echo_source" }
